package com.mnowo.composesurveyapp.core.util

object TestTags {
    const val LOGIN_SCREEN_TEXT_BUTTON = "LOGIN_SCREEN_TEXT_BUTTON"
    const val LOGIN_EMAIL = "login_email"
    const val LOGIN_PASSWORD = "login_password"
    const val LOGIN_BUTTON = "login_button"
    const val LOGIN_PROGRESSBAR = "login_progressbar"

    const val REGISTER_TEXT = "register_text"

    const val REGISTER_SCREEN_TEXT_BUTTON = "LOGIN_SCREEN_TEXT_BUTTON"
    const val REGISTER_EMAIL = "login_email"
    const val REGISTER_PASSWORD = "login_password"
    const val REGISTER_BUTTON = "login_button"
    const val REGISTER_PROGRESSBAR = "login_progressbar"

    const val HOME_TO_NEW_SURVEY_BUTTON = "HOME_TO_NEW_SURVEY_BUTTON"

    const val NEW_SURVEY_TO_HOME_BUTTON = "new_survey_to_home_button"
    const val NEW_SURVEY_TITLE = "NEW_SURVEY_TITLE"
    const val NEW_SURVEY_DESCRIPTION = "NEW_SURVEY_DESCRIPTION"
    const val NEW_SURVEY_BUTTON = "NEW_SURVEY_BUTTON"

    const val ADD_SURVEY_QUESTION_TITLE = "ADD_SURVEY_QUESTION_TITLE"
    const val ADD_SURVEY_QUESTION_ONE = "ADD_SURVEY_QUESTION_ONE"
    const val ADD_SURVEY_QUESTION_TWO = "ADD_SURVEY_QUESTION_TWO"
    const val ADD_SURVEY_QUESTION_THREE = "ADD_SURVEY_QUESTION_THREE"
    const val ADD_SURVEY_QUESTION_FOUR = "ADD_SURVEY_QUESTION_FOUR"
    const val ADD_SURVEY_QUESTION_ADD_SURVEY_BUTTON = "ADD_SURVEY_QUESTION_ADD_SURVEY_BUTTON"
    const val ADD_SURVEY_QUESTION_ADD_QUESTION_BUTTON = "ADD_SURVEY_QUESTION_ADD_QUESTION_BUTTON"
    const val ADD_SURVEY_QUESTION_PROGRESS_BAR = "ADD_SURVEY_QUESTION_PROGRESS_BAR"

}